added product detail page

--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
 <body>
     <div class="header">
         <div class="container">
-            <div class="navbar">
+            <div class="navbar navbar-container">
                 <div class="logo">
                     <p class="logo-top">ACCELERATE</p>
                 </div>
                 <nav>
                     <ul id="menuItems">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Products</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="product-details.html">Products</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="">Account</a></li>
                     </ul>
                 </nav>
-                <img src="images/cart.png" width="30px" height="30px" alt="" class="cart-icon">
-                <img src="images/menu.png" width="30px" class="menu-icon" onclick="menuToggle()">
+                <div class="nav-icons">
+                    <img src="images/cart.png" width="30px" height="30px" alt="" class="cart-icon">
+                    <img src="images/menu.png" width="30px" class="menu-icon" onclick="menuToggle()">
+                </div>
             </div>
     
             <div class="row">
