--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 </div>
                 <nav>
                     <ul id="menuItems">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="product-details.html">Products</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./product-details.html">Products</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="">Account</a></li>
